# avatars-as-a-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  development.Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: publish-latest-to-docker-hub.yml  publish-release-to-docker-hub.yml  publish-to-docker-hub.yml
avatars_as_a_service/: models.py  schemas.py  search.py
avatars_as_a_service/database/: connection.py
avatars_as_a_service/enums/: AvatarFeatures.py
avatars_as_a_service/serializers/: Avatar.py
tests/: test_avatars_as_a_service.py
