[tool.poetry]
name = "avatars-as-a-service"
version = "0.1.0"
description = "a fun project for generating avatars using AI"
authors = ["Lewis Munyi <lewismunyiii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
openai = "^1.6.1"
sqlalchemy = "^2.0.24"
psycopg2 = "^2.9.9"
pymysql = "^1.1.0"
cryptography = "^41.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^3.6.0"
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
